<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="348dp"
        android:layout_height="206dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/learning_time_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_project" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:foregroundTint="#FD0202"
        android:text="@string/the_fun_way_to_learn_with_your_child"
        android:textColor="#DD2C00"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/learnButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="116dp"
        android:layout_height="57dp"
        android:layout_marginTop="52dp"
        android:text="@string/learn"
        android:textColor="#DD2C00"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/preferenceButton"
        android:layout_width="196dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/preferences"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="#DD2C00"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learnButton" />

    <Button
        android:id="@+id/helpButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="108dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/help"
        android:textColor="#DD2C00"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferenceButton" />

</androidx.constraintlayout.widget.ConstraintLayout>