<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearningActivity">

    <ImageButton
        android:id="@+id/colorsLearnButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:contentDescription="@string/color"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/colors" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/learning"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/colors"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageButton
        android:id="@+id/shapesLearnButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/shapes"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:srcCompat="@drawable/shapes" />

    <ImageButton
        android:id="@+id/numbersLearnButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:contentDescription="@string/numbers"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/numbers" />

    <ImageButton
        android:id="@+id/animalsLearnButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="112dp"
        android:contentDescription="@string/animals"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/animals" />

    <ImageButton
        android:id="@+id/vehiclesLearnButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:contentDescription="@string/vehicles"
        android:scaleType="centerInside"
        android:src="@drawable/vehicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/numbers"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehiclesLearnButton" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        android:text="@string/animals"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/shapesLearnButton" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/vehicles"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorsLearnButton" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:text="@string/shapes"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="8dp"
        android:text="@string/letters"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/animalsLearnButton" />

    <ImageButton
        android:id="@+id/lettersLearnButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="108dp"
        android:contentDescription="@string/letters"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:srcCompat="@drawable/letters" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="24dp"
        android:text="@string/home"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="#DD2C00"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbersLearnButton" />
</androidx.constraintlayout.widget.ConstraintLayout>