<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickingActivity"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="363dp"
        android:layout_height="159dp"
        android:text="@string/learning_selection"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/learnButton"
        android:layout_width="303dp"
        android:layout_height="87dp"
        android:layout_marginTop="36dp"
        android:text="@string/learning"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="#DD2C00"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/gameButton"
        android:layout_width="303dp"
        android:layout_height="87dp"
        android:layout_marginTop="60dp"
        android:text="@string/game"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="#DD2C00"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learnButton" />

    <Button
        android:id="@+id/homeButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/home"
        android:text="@string/home"
        android:textColor="#DD2C00"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameButton" />
</androidx.constraintlayout.widget.ConstraintLayout>